[package]
name = "arcgis-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Pat Sier <pjsier@gmail.com>"]
description = "Crawl ArcGIS servers and report all available services"
readme = "README.md"
homepage = "https://github.com/pjsier/arcgis-crawler"
repository = "https://github.com/pjsier/arcgis-crawler"
license = "MIT"
exclude = [".github/*"]

[dependencies]
clap = "3.1.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "default-tls"] }
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
url = "2.2"
futures = "0.3"
tokio-stream = "0.1"
itertools = "0.10.3"
ptree = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "arcgis-crawler"
path = "src/main.rs"
